# Candytuft

./: .gitignore  CMakeLists.txt  FontRenderer.cpp  FontRenderer.hpp  Hitokoto.hpp  RenderableCharacter.cpp  RenderableCharacter.hpp  Shader.cpp  Shader.hpp  TransparentWindow.cpp  TransparentWindow.hpp  fsh.frag  glad.c  main.cpp  text.vsh  utils.hpp
includes/: logger.hpp
includes/glad/: glad.h
libs_win64/includes/freetype/config/: ftoption.h
modules/: Hitokoto.cpp  Hitokoto.hpp  SystemMonitor.cpp  SystemMonitor.hpp
